# Blur-AutoClicker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Readme.md  eslint.config.js  overlay.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: windows-release-trust.md
scripts/: sign-windows.ps1
src/: App.tsx  accentTheme.ts  cadence.ts  hotkeys.ts  i18n.ts  index.css  keyboardKeyCase.ts  main.tsx  numberInput.ts  settingsSchema.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.signing.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  autostart.rs  hotkeys.rs  lib.rs  overlay.rs  ui_commands.rs
src-tauri/src/engine/: failsafe.rs  keyboard.rs  mod.rs  mouse.rs  stats.rs  worker.rs
src-tauri/src/settings/: mod.rs
src/components/: CadenceInput.tsx  ConfirmDialog.css  ConfirmDialog.tsx  HotkeyCaptureInput.tsx  KeyCaptureInput.tsx  TitleBar.css  TitleBar.tsx  UnavailableReason.css  UnavailableReason.tsx  Updatebanner.css  Updatebanner.tsx
src/components/panels/: AdvancedPanelLayout.tsx  Modes.css  SettingsPanel.css  SettingsPanel.tsx  SimplePanel.css  SimplePanel.tsx
src/components/panels/advanced/: AdvancedPanel.css  AdvancedPanel.tsx  CadenceSection.tsx  DoubleClickSection.tsx  DutyCycleSection.tsx  LimitsSection.tsx  SequenceSection.tsx  SpeedVariationSection.tsx  shared.tsx
src/components/panels/zones/: CustomStopZoneSection.tsx  FailsafeSection.tsx  ZonesPanel.tsx
src/locales/: ar.json  de.json  en.json  es.json  fr.json
