[package]
name = "BlurAutoClicker"
version = "3.2.0"
description = "BlurAutoClicker"
authors = ["Blur009"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"              
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }
reqwest = { version = "0.12", features = ["json"] }
raw-window-handle = "0.6.2"
tauri-plugin-updater = "2.10.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dirs = "6.0.0"
windows-targets = "0.48"
